@@ -1,14 +1,14 @@
-{% extends "base_2col.html" %}
+{% extends "userprofile/base_2col.html" %}
 {% load i18n %}
 
 {% block title %}{% if successful %}{% trans 'E-mail validation successful' %}{% else %}{% trans 'E-mail change unsuccessful' %}{% endif %}{% endblock %}
 {% block robots %}noindex,nofollow{% endblock %}
 
-{% block nav-main %}
+{% block userprofile_navigation %}
 {% include "userprofile/menu.html" %}
 {% endblock %}
 
-{% block content %}
+{% block userprofile_content %}
 	<div class="{% if successful %}success{% else %}error{% endif %}">
 	{% if successful %}
   <p>{% trans "E-mail address validated successfully" %}.</p>
@@ -18,7 +18,7 @@
 	</div>
 {% endblock %}
 
-{% block content-related %}
+{% block userprofile_content_related %}
   <div class="box">
     <h3>{% trans "E-mail validation process" %}</h3>
     <p>{% trans "You can manage the e-mail validation process from the" %} <a href="{% url profile_overview %}">{% trans "overview page" %}.</p>
