@@ -1,20 +1,20 @@
-{% extends "base_2col.html" %}
+{% extends "userprofile/base_2col.html" %}
 {% load i18n %}
 
 {% block title %}{% trans 'Password change successful' %}{% endblock %}
 {% block robots %}noindex,nofollow{% endblock %}
 
-{% block nav-main %}
+{% block userprofile_navigation %}
 {% include "userprofile/menu.html" %}
 {% endblock %}
 
-{% block content %}
+{% block userprofile_content %}
 	<p class="success large">
 		{% trans "Your password has been set.  You may go ahead and log in now." %}
 	</p>
 {% endblock %}
 
-{% block content-related %}
+{% block userprofile_content_related %}
   <div class="box">
     <h3>{% trans 'Password reset' %}</h3>
     <p>{% trans "Password reset utility page. Please enter your new password twice so we can verify you typed it in correctly" %}.</p>
