@@ -1,4 +1,4 @@
-{% extends "base_2col.html" %}
+{% extends "userprofile/base_2col.html" %}
 {% load i18n %}
 
 {% block title %}{% trans 'Password change for' %} {{ user }}{% endblock %}
@@ -13,11 +13,11 @@
 </script>
 {% endblock %}
 
-{% block nav-main %}
+{% block userprofile_navigation %}
 {% include "userprofile/menu.html" %}
 {% endblock %}
 
-{% block content %}
+{% block userprofile_content %}
 
 {% if validlink %}
 
@@ -50,7 +50,7 @@
 {% endif %}
 {% endblock %}
 
-{% block content-related %}
+{% block userprofile_content_related %}
 	<div class="box">
 		<h3>{% trans 'Password reset' %}</h3>
 		<p>{% trans "Password reset utility page. Please enter your new password twice so we can verify you typed it in correctly" %}.</p>
