@@ -1,20 +1,20 @@
-{% extends "base_2col.html" %}
+{% extends "userprofile/base_2col.html" %}
 {% load i18n %}
 
 {% block title %}{% trans "Avatar selection finished" %}{% endblock %}
 {% block robots %}noindex,nofollow{% endblock %}
 
-{% block nav-main %}
+{% block userprofile_navigation %}
 {% include "userprofile/menu.html" %}
 {% endblock %}
 
-{% block content %}
+{% block userprofile_content %}
 	<p class="success large">
 		{% trans "Your new avatar has been saved successfully" %}.
 	</p>
 {% endblock %}
 
-{% block content-related %}
+{% block userprofile_content_related %}
   <div class="box">
     <h3>{% trans "Avatar selection page" %}</h3>
     <p>{% trans "You have several options to select the image you want as avatar on your profile" %}.</p>
