@@ -1,20 +1,20 @@
-{% extends "base_2col.html" %}
+{% extends "userprofile/base_2col.html" %}
 {% load i18n %}
 
 {% block title %}{% blocktrans %}{{ user }}'s Dashboard{% endblocktrans %}{% endblock %}
 {% block robots %}noindex,nofollow{% endblock %}
 
-{% block nav-main %}
+{% block userprofile_navigation %}
 {% include "userprofile/menu.html" %}
 {% endblock %}
 
-{% block content %}
+{% block userprofile_content %}
 	<p class="success large">
 		{% trans "Your profile information has been updated successfully" %}.
 	</p>
 {% endblock %}
 
-{% block content-related %}
+{% block userprofile_content_related %}
 <div class="box">
   <h3>{% trans "Location information" %}</h3>
     <p>{% trans "Define your location information" %}.</p>
